--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,20 +17,33 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-16.04
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v1
+        with:
+          python-version: "3.8"
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Install Conan
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+            pip install --upgrade pip cmake
+            python --version
+            pip --version
+            which cmake
+            cmake --version
+            pip install conan-package-tools
+            pip install git+https://github.com/blixttech/cpt-helpers.git
+            conan user
+
+      - name: Build
+        run: |
+            python build.py
+
+      env:
+        CONAN_USER: "kasunch"
+        CONAN_LOGIN_USERNAME: ${{ secrets.CONAN_LOGIN_USERNAME }}
+        CONAN_PASSWORD: ${{ secrets.CONAN_PASSWORD }}
+        CONAN_DOCKER_IMAGE: "conanio/gcc7"
+        CONAN_GCC_VERSIONS: "7"
+        CONAN_BUILD_TYPES: "Release"
