--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,8 +37,7 @@ jobs:
             conan user
 
       - name: Build
-        run: |
-            python build.py
+        run: python build.py
 
       env:
         CONAN_USER: "kasunch"
